--- a/application.yaml
+++ b/application.yaml
@@ -21,3 +21,9 @@ spec:
     automated:
       selfHeal: true
       prune: true
+  ignoreDifferences:
+    - group: ""
+      kind: Secret
+      name: my-app-secret
+      namespace: external-secrets
+
